fixed weird highlight bug on safari

--- a/assets/playlist/css/playlist.css
+++ b/assets/playlist/css/playlist.css
@@ -50,6 +50,16 @@
 .spin {
 	border-top: 1px solid rgba(255,255,255, 0.1);
 	padding: 0.2em 0;
+
+
+	/* Hack to stop it from highlighting shit when you drag */
+	 -webkit-touch-callout: none; /* iOS Safari */
+	   -webkit-user-select: none; /* Safari */
+	    -khtml-user-select: none; /* Konqueror HTML */
+	      -moz-user-select: none; /* Firefox */
+	       -ms-user-select: none; /* Internet Explorer/Edge */
+	           user-select: none; /* Non-prefixed version, currently
+	                                 supported by Chrome and Opera */
 }
 
 .entry-add-form {
